--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "dropzone": "^6.0.0-beta.2"
     }
 }
